--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>大家好，我是小稚</h1>    
+    <h1>大家好，我是小稚</h1>
+    <h2>告诉大家一个秘密：我特别能吃</h2>
 </body>
 </html>
