--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>大家好，我是小稚</h1>
     <h2>告诉大家一个秘密：我特别能吃</h2>
     <h3>特别特别能吃...</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga tenetur vel, velit exercitationem inventore facere excepturi ipsum sit vero magnam modi voluptatem eveniet at, sed ut quibusdam necessitatibus maiores?</p>
 </body>
 </html>
